# customer-churn-prediction

./: README.md  customer-churn-prediction.ipynb  eda-dashboards.ipynb  pyproject.toml  requirements.txt
