[project]
name = "customer-churn-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "streamlit>=1.50.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.0.5",
]
